--- a/translations/el_GR/sample.po
+++ b/translations/el_GR/sample.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Translators:
+# Test Account <mattjjacko+test@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: Txgh Test\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-17 20:10+0000\n"
-"PO-Revision-Date: 2015-09-09 23:28+0000\n"
-"Last-Translator: Ilias-Dimitrios Vrachnis\n"
+"PO-Revision-Date: 2015-09-10 19:06+0000\n"
+"Last-Translator: Test Account <mattjjacko+test@gmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/test-organization-4/txgh-test-1/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,34 +20,34 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "One"
-msgstr ""
+msgstr "Ένα"
 
 msgid "Two"
-msgstr ""
+msgstr "Δύο"
 
 msgid "Three"
-msgstr ""
+msgstr "Τρεις"
 
 msgid "Four"
-msgstr ""
+msgstr "Τέσσερις"
 
 msgid "Five"
-msgstr ""
+msgstr "Πέντε"
 
 msgid "Six"
-msgstr ""
+msgstr "Έξι"
 
 msgid "Seven"
-msgstr ""
+msgstr "Επτά"
 
 msgid "Eight"
-msgstr ""
+msgstr "Οκτώ"
 
 msgid "Nine"
-msgstr ""
+msgstr "Εννέα"
 
 msgid "Ten"
-msgstr ""
+msgstr "Δέκα"
 
 msgid "Elven"
-msgstr ""
+msgstr "Elven"
