--- a/sample.po
+++ b/sample.po
@@ -42,3 +42,7 @@ msgid "Twelve"
 msgstr "Twelve"
 msgid "Thirteen"
 msgstr "Thirteen"
+msgid "Fourteen"
+msgstr "Fourteen"
+msgid "Fifteen"
+msgstr "Fifteen"
