Updating translations for translations/el_GR/sample.po

--- a/translations/el_GR/sample.po
+++ b/translations/el_GR/sample.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Txgh Test\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-17 20:10+0000\n"
-"PO-Revision-Date: 2015-09-10 22:11+0000\n"
+"PO-Revision-Date: 2015-09-10 22:49+0000\n"
 "Last-Translator: Test Account <mattjjacko+test@gmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/test-organization-4/txgh-test-1/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
@@ -57,3 +57,9 @@ msgstr "Δώδεκα"
 
 msgid "Thirteen"
 msgstr "Δεκατρείς"
+
+msgid "Fourteen"
+msgstr "Δεκατέσσερα"
+
+msgid "Fifteen"
+msgstr "Δεκαπέντε"
