--- a/translations/el_GR/sample.po
+++ b/translations/el_GR/sample.po
@@ -4,13 +4,133 @@
 # 
 # Translators:
 # Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
+# Translators:
 # Test Account <mattjjacko+test@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: Txgh Test\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-17 20:10+0000\n"
-"PO-Revision-Date: 2015-09-11 06:57+0000\n"
+"PO-Revision-Date: 2015-11-14 00:49+0000\n"
 "Last-Translator: Test Account <mattjjacko+test@gmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/test-organization-4/txgh-test-1/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
@@ -54,3 +174,15 @@ msgstr "Elven"
 
 msgid "Twelve"
 msgstr "Δώδεκα"
+
+msgid "Thirteen"
+msgstr "Δεκατρείς"
+
+msgid "Fourteen"
+msgstr "Δεκατέσσερα"
+
+msgid "Fifteen"
+msgstr "Δεκαπέντε"
+
+msgid "Sixteen"
+msgstr "Δεκαέξι"
